# bat

./: .gitattributes  .gitignore  .travis.yml  BayesianCalculator.c  Dockerfile  INSTALL  INSTALL.md  Makefile  Makefile.am  README  README.md  Singularity  bat-config.in  bat.pc.in  configure.ac  cuba.h  get-cuba.sh  libBAT.rootmap  readme.devel  test-env.sh.in
benchmarks/test/: .gitignore  BCIntegrate_TEST.cxx  BCMath_TEST.cxx  BCModel_TEST.cxx  BCSummaryTool_TEST.cxx  GaussModel.cxx  GaussModel.h  IntegrationModel.cxx  IntegrationModel.h  Makefile.am  parallel_TEST.cxx  test.cxx
doc/: COPYING  CREDITS  ChangeLog  Doxyfile  INSTALL  LICENSE  Makefile-common.am  Makefile.am  README  changelog  customdoxygen.css  doxy-boot.js  examples.txt  footer.html  newcommands.js  readme.md  releasenotes.md  releasenotes.txt
doc/introduction/: Makefile  introduction.tex  new-intro.tex  references.bib  versions.tex.in
doc/manual/: Doxyfile  DoxygenLayout.xml  Makefile.am  basics.md  bat.sty  bayes.md  code-structure.md  doxygen.sty  example01_constant.eps  example01_data.eps  factorized-prior.md  factorized.md  footer.tex  front.md  getting-started.md  header.tex  integration.md  manual.tex  mcmc.md  model-comparison.md  mtf.md  optimization.md  output.md  predefined-models.md  readme.md  references.bib  scheme.eps  share.md  sharing-samples.md  threading.md  troubleshooting.md  validation.md  versions.tex
doc/manual/figures/: Makefile  random-walk.pdf_tex
doc/note_template/: note.tex
doc/note_template/fig/: lambda_fplus.eps  log.txt  model_correlation.eps  model_parameters.eps  model_results.txt  model_update.eps
doc/quickstart/: Makefile  quickstart.tex  tth
doc/ref-guide/: Doxyfile  Makefile.am  front.md
doc/todo/: MVCombination.txt  mtf.txt  plans.txt  todo.txt  todo_detail.txt  todo_rel0.4.0.txt
examples/advanced/advancedGraphFitter/: Makefile.am  README  graphFitterAdvancedExample.C
examples/advanced/rooInterface/: Makefile.am  PrepareWorkspace_GaussOverFlat.C  PrepareWorkspace_GaussOverFlat_withSystematics.C  PrepareWorkspace_Poisson_withSystematics.C  README  runBATCalculator.C  runRooInterface.cxx
examples/basic/rootOutput/: GaussModel.cxx  GaussModel.h  Makefile  Makefile.am  Makefile.in  README  analyzeMCMCTree.C  continueMCMC.cxx  readRootOutput.cxx  runRootOutput.cxx
models/: BATCalculator.cxx  BATCalculator.h  BATCalculatorLinkDef.h  BCEfficiencyFitter.cxx  BCEfficiencyFitter.h  BCGraphFitter.cxx  BCGraphFitter.h  BCHistogramFitter.cxx  BCHistogramFitter.h  BCRooInterface.cxx  BCRooInterface.h  BCRooInterface.rootmap  BCTemplateEnsembleTest.cxx  BCTemplateEnsembleTest.h  BCTemplateFitter.cxx  BCTemplateFitter.h  Makefile.am  README  libBATmodels.rootmap.in
models/BinLikeTool/: BinLikeModel.cxx  BinLikeModel.h  Makefile  README
models/BinLikeTool/TemplateFit/: TemplateFit.h  runTemplateFit.cxx
models/FBU/: Makefile  notes.txt
models/FBU/src/: BCFBU.cxx
models/RooInterface/: BCRooInterface.cxx  BCRooInterface.h  Makefile  PrepareWorkspace_GaussOverFlat.C  PrepareWorkspace_GaussOverFlat_withSystematics.C  PrepareWorkspace_Poisson.C  README  runRooInterface.cxx
models/StackTool/: CreateHistograms.c  Doxyfile  EnsembleTestTool.cxx  EnsembleTestTool.h  Makefile  README  StackModel.cxx  StackModel.h  StackModelManager.cxx  StackModelManager.h  runEnsembleTest.cxx  runGerda  runHypothesisTest.cxx  runTemplateFit.cxx  runTemplateGerda  runTemplateGerda.cxx
models/StackTool/0nubb/: runTemplateFit.cxx
models/StackTool/Whel/: CreateHistograms.c  Makefile  runEnsembleTest.cxx  runTemplateFit.cxx
models/StackTool/doc/: COPYING
models/StackTool/hypothesis/: histograms.root
models/SummaryTool/: Doxyfile  Makefile  PriorModel.cxx  PriorModel.h  README  SummaryTool.cxx  SummaryTool.h
models/SummaryTool/TestProject/: Makefile  (+3 more)
models/base/: BATCalculator.cxx  BATCalculator.h  BCEfficiencyFitter.cxx  BCEfficiencyFitter.h  BCFitter.cxx  BCFitter.h  BCGraphFitter.cxx  BCGraphFitter.h  BCHistogramFitter.cxx  BCHistogramFitter.h  BCRooInterface.cxx  BCRooInterface.h  BCRooInterface.rootmap  BCTemplateEnsembleTest.cxx  BCTemplateEnsembleTest.h  BCTemplateFitter.cxx  BCTemplateFitter.h  LDef.h  LDef_roostats.h  LDef_rootstats.h  Makefile.am  libBATmodels.rootmap  libBATmodels.rootmap.in
models/mtf/: BCMTF.cxx  BCMTF.h  BCMTFAnalysisFacility.cxx  BCMTFAnalysisFacility.h  BCMTFChannel.cxx  BCMTFChannel.h  BCMTFComparisonTool.cxx  BCMTFComparisonTool.h  BCMTFProcess.cxx  BCMTFProcess.h  BCMTFSystematic.cxx  BCMTFSystematic.h  BCMTFSystematicVariation.cxx  BCMTFSystematicVariation.h  BCMTFTemplate.cxx  BCMTFTemplate.h  LinkDef.h  Makefile.am  libBATmtf.rootmap
models/mvc/: BCMVCDataModel.cxx  BCMVCDataModel.h  BCMVCMeasurement.cxx  BCMVCMeasurement.h  BCMVCObservable.cxx  BCMVCObservable.h  BCMVCPhysicsModel.cxx  BCMVCPhysicsModel.h  BCMVCUncertainty.cxx  BCMVCUncertainty.h  BCMVCombination.cxx  BCMVCombination.h  LinkDef.h  Makefile.am  libBATmvc.rootmap
src/: BCAux.cxx  BCCauchyPrior.cxx  BCConstantPrior.cxx  BCDataPoint.cxx  BCDataSet.cxx  BCEfficiencyFitter.cxx  BCEmptyModel.cxx  BCEngineMCMC.cxx  BCGaussianPrior.cxx  BCGoFTest.cxx  BCGraphFitter.cxx  BCH1D.cxx  BCH2D.cxx  BCHistogramBase.cxx  BCHistogramFitter.cxx  BCHistogramRatioFitter.cxx  BCIntegrate.cxx  BCLog.cxx  BCMath.cxx  BCModel.cxx  BCModelHistogramFitter.cxx  BCModelManager.cxx  BCModelOutput.cxx  BCModelTest.cxx  BCObservable.cxx  BCObservableSet.cxx  BCParameter.cxx  BCParameterSet.cxx  BCPositiveDefinitePrior.cxx  BCPrior.cxx  BCPriorCauchy.cxx  BCPriorConstant.cxx  BCPriorGaussian.cxx  BCPriorLogTF1.cxx  BCPriorModel.cxx  BCPriorPositiveDefinite.cxx  BCPriorSplitGaussian.cxx  BCPriorTF1.cxx  BCPriorTH1.cxx  BCSPriorModel.cxx  (+13 more)
test/: BCAux_TEST.cxx  BCEngineMCMC_TEST.cxx  BCFitter_TEST.cxx  BCHistogram_TEST.cxx  BCIntegrate_TEST.cxx  BCMath_TEST.cxx  BCModel_TEST.cxx  BCParameter_TEST.cxx  BCPrior_TEST.cxx  BCSummaryTool_TEST.cxx  GaussModel.cxx  GaussModel.h  IntegrationModel.cxx  IntegrationModel.h  Makefile.am  README.md  parallel_TEST.cxx  test.cxx  test.h  test_TEST.cxx
(+647 files in other folders)
